# MpyC

./: Cargo.toml  IDEA.md  README.md
src/: doctor.rs  main.rs  use_version.rs  versions.rs
src/util/: config.rs  install.rs  mod.rs  path.rs
