[package]
name = "mpyc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
dirs = "6.0.0"
owo-colors = "4.3.0"
pep440 = "0.2.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] } # "1.0.228"
serde_json = "1.0.149"
toml = "1.0.3"
which = "8.0.0"
